--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "discord-webhook-notify",
   "description": "GitHub Action to send notifications to Discord using a webhook.",
   "version": "2.2.0",
-  "author": "rjstone@github",
+  "author": "dkaser@github",
   "type": "module",
   "private": false,
-  "homepage": "https://github.com/rjstone/discord-webhook-notify",
+  "homepage": "https://github.com/dkaser/discord-webhook-notify",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjstone/discord-webhook-notify.git"
+    "url": "git+https://github.com/dkaser/discord-webhook-notify.git"
   },
   "bugs": {
-    "url": "https://github.com/rjstone/discord-webhook-notify/issues"
+    "url": "https://github.com/dkaser/discord-webhook-notify/issues"
   },
   "keywords": [
     "actions",
@@ -34,30 +34,30 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.1",
-    "discord.js": "^14.19.3",
-    "multibyte": "^1.0.4"
+    "discord.js": "^14.22.1",
+    "multibyte": "^1.0.5"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.3.0",
-    "@github/local-action": "^3.2.1",
+    "@eslint/compat": "^1.3.2",
+    "@github/local-action": "^5.2.0",
     "@jest/globals": "^30.0.2",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "badge-maker": "^5.0.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
+    "cross-env": "^10.0.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-prettier": "^5.5.0",
-    "jest": "^30.0.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.1.3",
     "make-coverage-badge": "^1.2.0",
-    "npm": "^11.4.2",
-    "prettier": "^3.6.0",
+    "npm": "^11.6.0",
+    "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
-    "rollup": "^4.44.0"
+    "rollup": "^4.50.0"
   }
 }
